added support form

--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
     <body>
         <div>Добро пожаловать на наш сайт!</div>
         <button>К заказам</button>
+        <div class="chat">
+            <input type="text" placeholder="Введите текст">
+            <button>Отправить ЦПП</button>
+        </div>
     </body>
 </html>
