--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
             <input type="text" placeholder="Введите текст">
             <button>Отправить ЦПП</button>
         </div>
+        <div class="trash">
+            dsaddsadsasd
+        </div>
     </body>
 </html>
