--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <button>Отправить ЦПП</button>
         </div>
         <div class="trash">
-            dsaddsadsasd
+            dsaddsadsasdаФчааыввыывфвыфвыфвыф
         </div>
     </body>
 </html>
