--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <button>Отправить ЦПП</button>
         </div>
         <div class="trash">
-            dsaddsadsasdаФчааыввыывфвыфвыфвыф
+            HACKED ACCOUNT!
         </div>
     </body>
 </html>
