changed button color

--- a/chat/private.html
+++ b/chat/private.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="public.html">Наш публичный чат</a>
+    <a href="public.html" style="background-color: red;">Наш публичный чат</a>
 </body>
 </html>
